[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/widgets/resource_editor.gd" id="1_script"]

[node name="ResourceEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ToolBar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddResourceButton" type="Button" parent="VBoxContainer/ToolBar"]
layout_mode = 2
text = "Add Resource"

[node name="ResourceList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
